--- a/graphql-simple/package.json
+++ b/graphql-simple/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "npm": "^6.0.1",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.0"
   },
@@ -46,6 +47,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vuetable-2": "^1.7.5",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.7",
